--- a/3rd Game/Packages/manifest.json
+++ b/3rd Game/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.mobile.android-logcat": "1.2.3",
     "com.unity.mobile.notifications": "2.0.0",
+    "com.unity.recorder": "2.5.7",
     "com.unity.render-pipelines.universal": "10.7.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
