--- a/3rd Game/Packages/manifest.json
+++ b/3rd Game/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.spriteshape": "5.1.7",
+    "com.unity.ads": "3.7.5",
     "com.unity.collab-proxy": "1.15.18",
     "com.unity.formats.alembic": "2.1.2",
     "com.unity.ide.visualstudio": "2.0.17",
